# LionTrack

./: .gitignore  Jacob Karabin  KevinWang.txt  README.md  WilliamInfo.txt
LionTrack/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data_collection.cpp  face_recognizer.cpp  logfile.txt  main.cpp  training.cpp
LionTrack/Executable/: LionTrack  logfile.txt
